# safety-service-system

./: .env.example  .env.infra  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  dev-start-local.bat  dev-start.sh  docker-compose.infra.yml  docker-compose.yml  manage-infra.sh  start-backend.bat  start-frontend.bat  start-infra.sh  start.sh
backend/: Dockerfile  alembic.ini  check_dbs.py  check_tables.py  pyproject.toml  requirements.txt  run_migration.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20260330_0001_add_notice_tables.py  20260330_0002_add_payment_status.py
backend/app/: __init__.py  config.py  database.py  deps.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  attachments.py  auth.py  companies.py  contracts.py  dashboard.py  departments.py  documents.py  finance.py  invoices.py  logs.py  notices.py  permissions.py  roles.py  services.py  users.py
backend/app/core/: __init__.py  exceptions.py  middleware.py  permissions.py  security.py
backend/app/crud/: __init__.py  base.py  document.py  user.py
backend/app/models/: __init__.py  attachment.py  base.py  company.py  contract.py  document.py  finance.py  notice.py  service.py  system.py  user.py
backend/app/schemas/: __init__.py  attachment.py  base.py  document.py  user.py
backend/app/services/: minio_service.py
backend/scripts/: init_db.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
init-scripts/: 01-init-database.sql
(+64 files in other folders)
